extends Node2D

# ===== R√âF√âRENCES =====
@onready var button_play = $Node2D/VBoxContainer/ButtonPlay
@onready var button_options = $Node2D/VBoxContainer/ButtonOptions
@onready var button_quit = $Node2D/VBoxContainer/ButtonQuit
@onready var button_carnet = $Node2D/ButtonCarnet
@onready var menu_music = $Node2D/MenuMusic

var options_scene = preload("res://systems/scenes/locations/OptionsMenu.tscn")
var carnet_scene = preload("res://systems/scenes/ui/CarnetUI.tscn")
var options_instance = null

# ===== INITIALISATION =====
func _ready():
	# V√©rifier si musique persistante existe d√©j√†
	var persistent_music = get_tree().root.get_node_or_null("MenuMusicPersistent")
	
	if persistent_music:
		# La musique existe d√©j√† (retour depuis jeu)
		print("üéµ Musique persistante trouv√©e, r√©utilisation")
		# La rattacher √† cette sc√®ne
		get_tree().root.remove_child(persistent_music)
		$Node2D.add_child(persistent_music)
		persistent_music.name = "MenuMusic"
		menu_music = persistent_music
	elif menu_music and not menu_music.playing:
		# Premi√®re ouverture, d√©marrer la musique
		menu_music.play()
	
	# V√©rification boutons
	if button_play == null:
		push_error("ButtonPlay introuvable !")
		return
	
	# Configuration bouton selon sauvegarde
	if FileAccess.file_exists(Global.CHEMIN_SAVE):
		button_play.text = "Continue"
	else:
		button_play.text = "New Game"
	
	# Connexions
	button_play.pressed.connect(_on_play_pressed)
	if button_options:
		button_options.pressed.connect(_on_options_pressed)
	if button_quit:
		button_quit.pressed.connect(_on_quit_pressed)
	if button_carnet:
		button_carnet.pressed.connect(_on_carnet_pressed)
	
	print("=== MENU PRINCIPAL ===")

# ===== BOUTONS =====
func _on_play_pressed():
	print("Play/Continue button clicked")
	
	# Si sauvegarde existe, charger et reprendre
	if FileAccess.file_exists(Global.CHEMIN_SAVE):
		var chargement_ok = Global.charger_sauvegarde()
		
		if chargement_ok:
			var progression = Global.donnees_joueur.get("progression", "")
			print("Progression charg√©e: ", progression)
			
			# FIX: Toujours aller √† l'appartement si progression contient "appartement"
			if "appartement" in progression:
				print("‚Üí Appartement 3D (Continue)")
				get_tree().change_scene_to_file("res://systems/scenes/locations/Appartement3D.tscn")
			elif progression == "menu" or progression == "creation_perso" or progression == "":
				print("‚Üí Character Creation")
				get_tree().change_scene_to_file("res://systems/scenes/locations/CharacterCreation.tscn")
			elif "commissariat" in progression:
				print("‚Üí Commissariat")
				get_tree().change_scene_to_file("res://systems/scenes/locations/Commissariat.tscn")
			else:
				print("‚ö†Ô∏è Progression inconnue: %s, d√©marrage appartement" % progression)
				get_tree().change_scene_to_file("res://systems/scenes/locations/Appartement3D.tscn")
		else:
			# Erreur chargement
			print("Erreur chargement save, nouvelle partie")
			_nouvelle_partie()
	else:
		# Pas de save
		_nouvelle_partie()

func _nouvelle_partie():
	print("‚Üí Nouvelle partie")
	Global.nouvelle_partie()
	
	# Garder la musique en mode persistant
	if menu_music and menu_music.playing:
		# D√©tacher de la sc√®ne actuelle et ajouter √† root
		var parent = menu_music.get_parent()
		if parent:
			parent.remove_child(menu_music)
		get_tree().root.add_child(menu_music)
		menu_music.name = "MenuMusicPersistent"
		print("üéµ Musique persistante activ√©e")
	
	get_tree().change_scene_to_file("res://systems/scenes/locations/CharacterCreation.tscn")

func _on_options_pressed():
	print("Options menu")
	
	if options_instance:
		return
	
	options_instance = options_scene.instantiate()
	get_tree().root.add_child(options_instance)
	options_instance.tree_exited.connect(func(): options_instance = null)

func _on_quit_pressed():
	print("Quitting game")
	get_tree().quit()

func _on_carnet_pressed():
	print("üìì Ouverture carnet depuis menu")
	var carnet = carnet_scene.instantiate()
	get_tree().root.add_child(carnet)
